let templates know if running in android

--- a/python/airi/templates/base.html
+++ b/python/airi/templates/base.html
@@ -61,6 +61,10 @@
           extra='id="reload_button"') }}
     </div>
   </div>
+  {% if android %}
+    <script type="text/javascript" src="/media/js/json2.js"></script>
+    <script type="text/javascript" src="/media/js/android.js"></script>
+  {% endif %}
   <script type="text/javascript" src="/media/js/jquery-1.6.1.min.js"></script>
   <script type="text/javascript" src="/media/js/custom.js"></script>
   <script type="text/javascript" src="/media/js/jquery.mobile-1.0b1.js"></script>
